# wakezilla

./: .gitignore  Cargo.toml  README.md  build.rs  install.sh
.github/workflows/: ci.yml  release.yml  windows-installer-repro.yml
common/src/: lib.rs
frontend/: index.html
frontend/src/: api.rs  models.rs
frontend/src/components/machines/: detail.rs
scripts/: test-install-ps1.ps1  test-install-sh.sh
scripts/release/: docker_tags.sh
src/: access_log.rs  api_models.rs  config.rs  forward.rs  lib.rs  main.rs  proxy_server.rs  web.rs
src/tray/: desktop.rs
tests/: proxy_integration.rs  web_api_integration.rs
tests/fixtures/install/: release-v0.1.49.json
tui/src/: app.rs  ui.rs
tui/src/screens/: add_machine.rs  detail.rs
