[workspace]
members = [".", "frontend", "common"]
resolver = "2"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1

[package]
name = "wakezilla"
version = "0.2.2"
edition = "2021"
build = "build.rs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/guibeira/wakezilla"
homepage = "https://github.com/guibeira/wakezilla"
description = "A Wake-on-LAN proxy server written in Rust"
keywords = ["wol", "proxy", "rust"]
categories = ["command-line-utilities", "network-programming", "web-programming"]
include = [
    "src/**",
    "tests/**",
    "frontend/Cargo.toml",
    "frontend/Cargo.lock",
    "frontend/Trunk.toml",
    "frontend/index.html",
    "frontend/favicon.ico",
    "frontend/src/**",
    "frontend/style/**",
    "frontend/public/**",
    "frontend-dist/**",
    "build.rs",
    "common/Cargo.toml",
    "common/src/**",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
]


[dependencies]
clap = { version = "4", features = ["derive"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "sync", "net", "time", "io-util", "signal"] }
serde_json = "1.0"
askama = "0.12"
askama_axum = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-futures = { version = "0.2", features = ["tokio"] }
ipnetwork = "0.20.0"
pnet = "0.34.0"
dns-lookup = "2.0.4"
futures-util = "0.3"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
ratatui = "0.29"
crossterm = "0.28"
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.11.2"
once_cell = "1.19.0"
anyhow = "1.0"
config = { version = "0.14", features = ["toml", "yaml", "json"] }
toml = "0.8"
tower = "0.5"
tower-http  = {version = "0.6.6", features = [ "cors", "fs"] }
mime_guess = "2.0"
include_dir = "0.7.4"
wakezilla-common = { path = "common", version = "0.1.0" }
semver = "1.0"
sha2 = "0.10"
flate2 = "1.0"
tar = "0.4"
tempfile = "3"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

[build-dependencies]
which = "4"
